--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Libre+Franklin:100,400,600,900&display=swap);
+@import url(//fonts.googleapis.com/css?family=Vibur);
 
 //Colors
 $primary-color: #000;
@@ -7,9 +8,15 @@ $secondary-color: rgb(56, 56, 56);
 
 //Main
 body {
-  height: calc(100vh);
-  background-color: transparent;
-  font-family: 'Libre Franklin', sans-serif;
+  font-size: 16px;
+  background: #333333;
+  color: #ffffff;
+  text-align: center;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  height: 100vh;
 }
 
 .city { 
@@ -115,36 +122,162 @@ ul {
   padding-top: 5px;
 }
 
-.avatar {
+// Animations
+
+// Flicker neon sign
+html,body{
+  height:100%
+}
+
+.logo {
+  text-align: center;
+  width: 65%;
+  height: 250px;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  user-select: none;
+}
+
+.logo b{
+  font: 400 8vh "Vibur";
+  color: #fee;
+  text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000;
+}
+.logo b span{
+  animation: blink linear infinite 2s;
+}
+.logo b span:nth-of-type(2){
+  animation: blink linear infinite 3s;
+}
+@keyframes blink {
+  78% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  79%{
+     color: #333;
+  }
+  80% {
+    
+    text-shadow: none;
+  }
+  81% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  82% {
+    color: #333;
+    text-shadow: none;
+  }
+  83% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  92% {
+    color: #333;
+    text-shadow: none;
+  }
+  92.5% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+}
+
+
+#btn-twtr{
+  clear:both;
+  color:#fff;
+  border:2px solid;
+  border-radius:3px;
+  text-align:center;
+  text-decoration:none;
+  display:block;
+  font-family:sans-serif;
+  font-size:14px;
+  width:13em;
+  padding:5px 10px;
+  font-weight:600;
+  position:absolute;
+  bottom:20px;
+  left:0;
+  right:0;
+  margin:0 auto;
+  background:rgba(0,0,0,0.2);
+  box-shadow:0 0 0px 3px rgba(0,0,0,0.2);
+  opacity:0.4
+}#btn-twtr:hover{color:#fff;opacity:1}
+
+
+// Moon animation
+// colors
+$background: #182C51;
+$moon: #C7938B;
+$peak: #efdbd8;
+$mobile: 768px;
+
+// keyframes
+@keyframes cresent{
+  0%{
+    transform: translate(-30px, 30px) scale(0.9);
+    box-shadow: none;
+  }
+  50%{
+    transform: translate(0px, 0px) scale(1.02);
+    box-shadow: 0 0 10px lighten($moon, 30%), 0 0 80px 8px $moon;
+    background-color: $peak;
+  }
+  100%{
+    transform: translate(30px, -30px) scale(0.9);
+    box-shadow: none;
+  }
+}
+
+html{
+  box-sizing: border-box;
+}
+
+*,*::after, *::before{
+  box-sizing: inherit;
+}
+
+html,body{
+  height: 100%;
+}
+
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(30deg, $background, darken($background, 13%));
+  overflow: hidden;
+}
+
+.moon{
+  background-image: linear-gradient(30deg, darken($background,4.6%), darken($background, 8.3%));
+  width: 256px;
+  height: 256px;
   border-radius: 50%;
-  width: 180px;
-  height: 180px;
+  position: relative;
+  &::before{
+    content: '';
+    background-color: $moon;
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    z-index: -1;
+    animation: 30s cresent linear infinite alternate;
+  }
 }
 
-// Sections
-.rep {
-  @extend .avatar;
-}
-
-.voting {
-  @extend .flex-spread;
-  width: 300px;
-  padding: 5px; 
-
-  div + div {
-   text-align: right;
-
-
-   p {
-    text-align: center;
-    color: white;
-    background-color: red;
-    padding-right: 8px;
-    padding-left: 8px;
-
-     &.agree {
-       background-color: green;
-     }
-   }
+@media (max-width: 768px) {
+  .moon{
+    width: 160px;
+    height: 160px;
   }
 }
