--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -2,26 +2,66 @@
 @import url(//fonts.googleapis.com/css?family=Vibur);
 
 //Colors
-$primary-color: #000;
-$secondary-color: rgb(56, 56, 56);
+$background: #182C51;
 
+// Moon animation colors
+$moon: #C7938B;
+$peak: #efdbd8;
+$mobile: 768px;
 
 //Main
-body {
+html,body{
+  height: 100%;
+}
+
+.home { 
+  box-sizing: border-box;
   font-size: 16px;
-  background: #333333;
   color: #ffffff;
   text-align: center;
-  height: 100vh;
   margin: 0;
   display: flex;
   align-items: center;
-  height: 100vh;
+
+  .sky {
+    z-index: -1;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(30deg, $background, darken($background, 13%));
+  }
+
+  .moon{
+    background-image: linear-gradient(30deg, darken($background,4.6%), darken($background, 8.3%));
+    width: 256px;
+    height: 256px;
+    border-radius: 50%;
+    position: relative;
+    &::before {
+      content: '';
+      background-color: $moon;
+      position: absolute;
+      display: block;
+      height: 100%;
+      width: 100%;
+      border-radius: 50%;
+      z-index: -1;
+      animation: 30s cresent linear infinite alternate;
+    }
+    *,*::after, *::before{
+      box-sizing: inherit;
+    }
+  }
+
+  .link-container {
+    position: fixed;
+    bottom: 30px;
+  }
 }
 
-.city { 
-  width: 200px;
-}
+
 
 //Text
 h1,
@@ -33,6 +73,11 @@ h3 {
 h1,
 h2 {
   font-weight: 800;
+}
+
+h6 {
+  font-size: 9px;
+  text-transform: uppercase;
 }
 
 ul {
@@ -115,19 +160,56 @@ ul {
   margin-bottom: 10px;
 }
 
-// Helper css components
+// Components
 .separator {
   width: 100%;
   border-bottom: 1px solid rgba(0,0,0,.125);
   padding-top: 5px;
 }
 
+.content-link,
+ .home-link {
+  position: fixed;
+  top: 20px;;
+ }
+
+.content-link {
+  right: 20px;;
+
+  a {
+    color: $peak;
+    text-decoration: none;
+    transition: all .5s;
+    &:hover, &:active {
+      color: $moon;
+    }
+  }
+}
+
+.home-link {
+  left: 20px;;
+
+  img {
+    height: 20px;
+    width: 20px;
+  }
+}
+
+.article-main-container {
+  background-color: $background;
+}
+
+.article-text-container {
+  padding: 20px;
+  color: #fff;
+  width: 80%;
+  margin: auto;
+}
+
 // Animations
 
 // Flicker neon sign
-html,body{
-  height:100%
-}
+
 
 .logo {
   text-align: center;
@@ -187,7 +269,6 @@ html,body{
   }
 }
 
-
 #btn-twtr{
   clear:both;
   color:#fff;
@@ -213,11 +294,7 @@ html,body{
 
 
 // Moon animation
-// colors
-$background: #182C51;
-$moon: #C7938B;
-$peak: #efdbd8;
-$mobile: 768px;
+
 
 // keyframes
 @keyframes cresent{
@@ -236,48 +313,11 @@ $mobile: 768px;
   }
 }
 
-html{
-  box-sizing: border-box;
-}
-
-*,*::after, *::before{
-  box-sizing: inherit;
-}
-
-html,body{
-  height: 100%;
-}
-
-body{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: linear-gradient(30deg, $background, darken($background, 13%));
-  overflow: hidden;
-}
-
-.moon{
-  background-image: linear-gradient(30deg, darken($background,4.6%), darken($background, 8.3%));
-  width: 256px;
-  height: 256px;
-  border-radius: 50%;
-  position: relative;
-  &::before{
-    content: '';
-    background-color: $moon;
-    position: absolute;
-    display: block;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    z-index: -1;
-    animation: 30s cresent linear infinite alternate;
-  }
-}
-
 @media (max-width: 768px) {
   .moon{
     width: 160px;
     height: 160px;
   }
 }
+
+
